--- a/web/style/welcome.css
+++ b/web/style/welcome.css
@@ -4,7 +4,7 @@
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 50px;
+    height: 60px;
     background-color: #FFFFFF50;
     color: #252525;
     user-select: none;
@@ -17,9 +17,8 @@
     left: 50px;
     float: left;
     width: 300px;
-    height: 30px;
-    padding: 10px;
-    line-height: 30px;
+    height: 100%;
+    line-height: 60px;
     font-size: 18px;
     font-weight: bold;
 }
